@@ -1,15 +1,17 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:alpine AS builder
 
-FROM openjdk:8-jre-slim
+WORKDIR /build
 
-EXPOSE 8080
+ADD go.mod .
 
-RUN mkdir /app
+COPY . .
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+RUN go build -o hello hello.go
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+FROM alpine
 
+WORKDIR /build
+
+COPY --from=builder /build/hello /build/hello
+
+CMD [". /hello"]
